--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
         "@ionic-native/geolocation": "^5.19.1",
         "@ionic-native/splash-screen": "^5.19.1",
         "@ionic-native/status-bar": "^5.19.1",
+        "@ionic-native/web-intent": "^5.19.1",
         "@ionic/angular": "^4.11.7",
         "@ionic/storage": "2.2.0",
         "@okta/okta-auth-js": "^2.11.2",
         "@oktadev/schematics": "^1.1.4",
         "angular-oauth2-oidc": "^8.0.4",
         "call-number": "^1.0.1",
+        "com-darryncampbell-cordova-plugin-intent": "^2.0.0",
         "cordova-android": "8.1.0",
         "cordova-browser": "6.0.0",
         "cordova-plugin-advanced-http": "^2.3.1",
@@ -51,6 +53,7 @@
         "ionic-appauth": "0.4.4",
         "rxjs": "^6.5.4",
         "tslib": "^1.9.0",
+        "uuid": "^3.3.3",
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
@@ -102,7 +105,8 @@
             },
             "cordova-sqlite-storage": {},
             "mx.ferreyra.callnumber": {},
-            "cordova-plugin-call-number": {}
+            "cordova-plugin-call-number": {},
+            "com-darryncampbell-cordova-plugin-intent": {}
         },
         "platforms": [
             "android",
