--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@ionic-native/call-number": "^5.19.1",
         "@ionic-native/core": "^5.19.1",
         "@ionic-native/geolocation": "^5.19.1",
+        "@ionic-native/native-geocoder": "^5.19.1",
         "@ionic-native/splash-screen": "^5.19.1",
         "@ionic-native/status-bar": "^5.19.1",
         "@ionic-native/web-intent": "^5.19.1",
@@ -43,6 +44,7 @@
         "cordova-plugin-inappbrowser": "^3.2.0",
         "cordova-plugin-ionic-keyboard": "^2.2.0",
         "cordova-plugin-ionic-webview": "^4.1.3",
+        "cordova-plugin-nativegeocoder": "^3.2.2",
         "cordova-plugin-safariviewcontroller": "^1.6.0",
         "cordova-plugin-secure-storage": "^3.0.2",
         "cordova-plugin-splashscreen": "^5.0.3",
@@ -106,7 +108,8 @@
             "cordova-sqlite-storage": {},
             "mx.ferreyra.callnumber": {},
             "cordova-plugin-call-number": {},
-            "com-darryncampbell-cordova-plugin-intent": {}
+            "com-darryncampbell-cordova-plugin-intent": {},
+            "cordova-plugin-nativegeocoder": {}
         },
         "platforms": [
             "android",
