--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "cordova-sqlite-storage": "^4.0.0",
         "core-js": "^2.6.11",
         "ionic-appauth": "0.4.4",
+        "react-star-rating-component": "^1.4.1",
         "rxjs": "^6.5.4",
         "tslib": "^1.9.0",
         "uuid": "^3.3.3",
